<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="indexHistoryScreen1RowModel" type="com.application.app.modules.indexhistoryscreen.data.model.IndexHistoryScreen1RowModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGroup"
        android:layout_height="wrap_content" android:layout_width="match_parent">
        <ImageView android:id="@+id/imageRectangle122"
            android:layout_height="0dp"
            android:layout_width="@dimen/_328pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_rectangle122_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1.0:0.35060975"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup201"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintGroup199"
            app:layout_constraintEnd_toEndOf="@+id/imageRectangle122"
            app:layout_constraintStart_toStartOf="@+id/imageRectangle122" app:layout_constraintTop_toTopOf="@+id/imageRectangle122">
            <View android:background="@color/teal_200"
                android:id="@+id/lineCoolicon"
                android:layout_height="@dimen/_16pxv"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_width="@dimen/_3pxh"
                app:layout_constraintBottom_toBottomOf="@+id/txtKonsultasiPers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.03"
                app:layout_constraintStart_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <ImageView android:id="@+id/imageRectangle123"
                android:layout_height="0dp"
                android:layout_width="@dimen/_96pxh"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1.0:0.5901843"
                app:layout_constraintEnd_toStartOf="@+id/txtKonsultasiPers"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                cornerRadius="@{@dimen/_6pxh}"
                imageRes="@{@drawable/img_rectangle123}" tools:src="@drawable/img_rectangle123"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtOlehRicardArc"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="0dp" android:singleLine="true"
                android:text="@{indexHistoryScreen1RowModel.txtOlehRicardArc}"
                app:layout_constraintBottom_toTopOf="@+id/txtSenin9Mei20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageRectangle123"
                app:layout_constraintTop_toBottomOf="@+id/txtKonsultasiPers"
                style="@style/txtRobotoregular11" tools:text="@string/msg_oleh_ricard_arc"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtKonsultasiPers"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="0dp" android:singleLine="true"
                android:text="@{indexHistoryScreen1RowModel.txtKonsultasiPers}"
                app:layout_constraintBottom_toTopOf="@+id/txtOlehRicardArc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageRectangle123"
                app:layout_constraintTop_toTopOf="@+id/imageRectangle123"
                style="@style/txtRobotomedium13" tools:text="@string/msg_konsultasi_pers"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtSenin9Mei20"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginEnd="@dimen/_42pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="0dp" android:singleLine="true"
                android:text="@{indexHistoryScreen1RowModel.txtSenin9Mei20}"
                app:layout_constraintBottom_toBottomOf="@+id/imageRectangle123"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageRectangle123"
                app:layout_constraintTop_toBottomOf="@+id/txtOlehRicardArc"
                style="@style/txtRobotoregular10" tools:text="@string/msg_senin_9_mei_20"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup199"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageRectangle122"
            app:layout_constraintEnd_toEndOf="@+id/imageRectangle122"
            app:layout_constraintStart_toStartOf="@+id/imageRectangle122" app:layout_constraintTop_toBottomOf="@+id/constraintGroup201">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTotalHarga"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{indexHistoryScreen1RowModel.txtTotalHarga}"
                app:layout_constraintBottom_toTopOf="@+id/txtRp50000"
                app:layout_constraintEnd_toStartOf="@+id/btnBerhasil"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/txtPoppinsregular11" tools:text="@string/lbl_total_harga"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtRp50000"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{indexHistoryScreen1RowModel.txtRp50000}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnBerhasil"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTotalHarga"
                style="@style/txtPoppinsbold12" tools:text="@string/lbl_rp_50_000"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnBerhasil"
                android:layout_height="@dimen/_24pxv"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginEnd="@dimen/_4pxh"
                android:layout_width="@dimen/_196pxh"
                android:paddingBottom="@dimen/_7pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_7pxv"
                android:singleLine="true"
                android:text="@string/lbl_berhasil"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toEndOf="@+id/txtRp50000"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/btnSolidRounded" tools:text="@string/lbl_berhasil"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
